| Bug #44132 | Bug in ndbapi-application can crash datanodes | ||
|---|---|---|---|
| Submitted: | 7 Apr 2009 11:44 | Modified: | 7 May 2009 15:18 |
| Reporter: | Gustaf Thorslund | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | >= telco-6.2 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[7 Apr 2009 11:44]
Gustaf Thorslund
[9 Apr 2009 13:49]
Jonathan Miller
Waiting on input from customer
[6 May 2009 10:19]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/73475 2914 Jonas Oreland 2009-05-06 ndb - bug#44132 Enforce stricter checking in input data for insert/update to prevent bugs in ndbapi applications to insert corrupt data into db, which cas cause later crashes
[6 May 2009 12:07]
Bugs System
Pushed into 5.1.32-ndb-6.3.25 (revid:jonas@mysql.com-20090506110937-wloyovra7v732nw6) (version source revid:jonas@mysql.com-20090506110937-wloyovra7v732nw6) (merge vers: 5.1.32-ndb-6.3.25) (pib:6)
[6 May 2009 12:08]
Bugs System
Pushed into 5.1.32-ndb-7.0.6 (revid:jonas@mysql.com-20090506120323-js5j4twu5w71iy0a) (version source revid:jonas@mysql.com-20090506120323-js5j4twu5w71iy0a) (merge vers: 5.1.32-ndb-7.0.6) (pib:6)
[6 May 2009 12:09]
Bugs System
Pushed into 5.1.32-ndb-6.2.18 (revid:jonas@mysql.com-20090506101635-2hm4lyqgtzhw8lmi) (version source revid:jonas@mysql.com-20090506101635-2hm4lyqgtzhw8lmi) (merge vers: 5.1.32-ndb-6.2.18) (pib:6)
[7 May 2009 15:18]
Jon Stephens
Documented bugfix in the NDB-6.2.18, 6.3.25, and 7.0.6 changelogs as follows:
It was possible for NDB API applications to insert corrupt data
into the database, which could subquently lead to data node
crashes. Now, stricter checking is enforced on input data for
inserts and updates.
