ndb - bug#44132   Enforce stricter checking in input data for insert/update   to prevent bugs in ndbapi applications to insert corrupt data into   db, which cas cause later crashes